--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "saaspass-client",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "SAASPASS REST API client",
+  "repository" :
+  {
+    "type" : "git",
+    "url" : "https://github.com/mnaamani/saaspass.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
